--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "KASPER CRM",
-  "name": "A kasper infotech Management APP",
+  "short_name": "UPBS Technology CRM",
+  "name": "A UPBS Technology Management APP",
   "icons": [
     {
       "src": "favicon.ico",
