--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "jsonwebtoken": "^8.5.1",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.0",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "npm": "^6.14.18",
     "react": "^18.3.1",
@@ -53,7 +54,7 @@
     "react-push-notification": "^1.5.4",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^5.3.4",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "^4.0.3",
     "react-select": "^5.8.0",
     "react-spinners": "^0.13.8",
